# openblok

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
cmake/: BundledDependencies.cmake  OpenblokProps.cmake
etc/appimage/: travis.sh
src/: CMakeLists.txt  main.cpp
src/game/: AppContext.cpp  CMakeLists.txt  GameConfigFile.cpp  Theme.cpp
src/game/components/: MinoStorage.cpp  MinoStorage.h  NextQueue.cpp  Well.cpp  Well.h
src/game/components/animations/: LineClearAnim.cpp
src/game/states/: IngameState.cpp
src/game/states/substates/ingame/: Gameplay.cpp  PlayerSelect.cpp  TeamSelect.cpp
src/game/states/substates/mainmenu/: Base.cpp  Options.cpp
src/system/: CMakeLists.txt  ConfigFile.cpp  InputConfigFile.cpp  Log.cpp  Log.h
src/system/sdl/: SDLAudioContext.cpp  SDLGraphicsContext.cpp  SDLWindow.cpp
tests/: CMakeLists.txt
